# mcpost

./: .gitconfig_test  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_FIXES.md  DOCUMENTATION_STATUS.md  FIXES_SUMMARY.md  LICENSE  MANIFEST.in  README.md  README_GSA.md  mc_int.py  pyproject.toml  pytest-local.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  code-quality.yml.disabled  docs.yml  docs.yml.disabled  release.yml  simple-ci.yml
.kiro/specs/mcpost-package-improvement/: design.md  requirements.md  tasks.md
benchmarks/: __init__.py  benchmark_gsa.py  benchmark_integration.py  run_benchmarks.py
docs/: BACKWARD_COMPATIBILITY.md  MIGRATION_GUIDE.md  RELEASE_GUIDE.md  extension_guide.md
docs/examples/: financial_risk_analysis.py
docs/tutorials/: getting_started.ipynb  gsa_comprehensive.ipynb  gsa_comprehensive.md
examples/: climate_sensitivity.py  financial_risk.py  gsa_basic_example.py  integration_comparison.py
mcpost/: __init__.py  _version.py  py.typed
mcpost/gsa/: __init__.py  base.py  chunked_pipeline.py  kernels.py  metrics.py  pipeline.py  plotting.py
mcpost/integration/: __init__.py  base.py  chunked_integration.py  importance.py  monte_carlo.py  quasi_monte_carlo.py
mcpost/utils/: __init__.py  chunked.py  config.py  data.py  profiling.py  validation.py
scripts/: test_build.py  validate_backward_compatibility.py  validate_ci.py  validate_documentation.py  validate_release_docs.py
tests/: __init__.py  conftest.py  test_config_properties.py  test_dependency_properties.py  test_documentation_properties.py  test_extension_properties.py  test_gsa_backward_compatibility.py  test_integration_backward_compatibility.py  test_package_structure.py  test_performance_properties.py
tests/integration/: test_end_to_end.py  test_examples.py
tests/legacy_mocks/: gsa_pipeline.py
tests/test_gsa/: __init__.py  test_pipeline.py  test_properties.py
tests/test_integration/: __init__.py  test_monte_carlo.py  test_properties.py
tests/test_utils/: __init__.py  test_config.py  test_validation.py
