[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpost"
dynamic = ["version"]
description = "Monte Carlo Post-analysis package for global sensitivity analysis and integration"
readme = "README.md"
license = "MIT"
authors = [
    {name = "MCPost Contributors", email = "mcpost@example.com"}
]
maintainers = [
    {name = "MCPost Contributors", email = "mcpost@example.com"}
]
keywords = ["monte-carlo", "sensitivity-analysis", "integration", "statistics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "dcor>=0.5.0",
    "SALib>=1.4.0",
    "tqdm>=4.60.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.5.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
    "ipykernel>=6.0.0",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=3.0",
    "hypothesis>=6.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
    "build>=0.8.0",
    "twine>=4.0.0",
    "isort>=5.10.0",
    "safety>=2.0.0",
    "bandit>=1.7.0",
    "radon>=5.1.0",
    "xenon>=0.9.0",
    "docstr-coverage>=2.0.0",
    "pip-audit>=2.0.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "jupyter>=1.0",
    "nbsphinx>=0.8",
    "nbconvert>=6.0",
    "readme-renderer>=35.0",
]
all = [
    "mcpost[viz,jupyter,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/zzhang0123/mcpost"
Repository = "https://github.com/zzhang0123/mcpost"
"Bug Tracker" = "https://github.com/zzhang0123/mcpost/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcpost*"]
exclude = ["tests*", "docs*", "benchmarks*"]

[tool.setuptools.package-data]
mcpost = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "mcpost._version.__version__"}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["mcpost"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "dcor.*",
    "SALib.*",
    "matplotlib.*",
    "sklearn.*",
    "scipy.*",
]
ignore_missing_imports = true